# leadscout

./: .env.example  .gitignore  README.md  handoff.md  howToUse.md  prompt.md  pyproject.toml
Implementations/: README.md  step02_implementation.md  step03_implementation.md  step04_implementation.md  step05_implementation.md  step06_implementation.md  step07B_implementation.md  step07C_implementation.md  step07D_implementation.md  step07E_implementation.md  step07_implementation.md
docs/sessions/: README.md  session-01-bootstrap.md  session-02-verify.md  session-03-live-discover.md  session-04-live-enrich.md  session-05-live-score.md  session-06-real-run.md  session-07-post-mvp.md
fixtures/: indiamart.json  justdial.json  llm_scores.json  places.json
fixtures/scrapes/: brightsmile.example.html  cityhospital.example.html  familydental.example.html  plainclinic.example.html  teamclinic.example.html
out_d/: leadscout.db
scripts/: check_secrets.py  install_hooks.py
src/leadscout/: __init__.py  cache.py  cli.py  clients.py  config.py  io_out.py  models.py  pipeline.py  store.py
src/leadscout/stages/: __init__.py  discover.py  enrich.py  filter.py  score.py
tests/: conftest.py  test_discover.py  test_enrich.py  test_filter.py  test_live_discover.py  test_live_enrich.py  test_live_score.py  test_pipeline.py  test_score.py  test_sources.py  test_store.py
