[project]
name = "leadscout"
version = "0.1.0"
description = "ICP-driven local lead discovery & qualification engine (internal tool)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "pandas>=2.2",
    "openai>=1.40",
    "python-dotenv>=1.0",
    "typer>=0.12",
]

[project.scripts]
leadscout = "leadscout.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.10", "types-PyYAML"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/leadscout"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
packages = ["leadscout"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
